src/objects/Available_Unit_Remove__c.object
<CustomObject>
    <fields>
        <fullName>Assisted_Living_Facility__c</fullName>
        <label>Assisted Living Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Property__c</fullName>
        <label>Associated Property</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipName>Social_Serve_Available_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available_Unit_Count__c</fullName>
        <label>Available Unit Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apartments</fullName>
                </value>
                <value>
                    <fullName>Single Room Occupancy</fullName>
                </value>
                <value>
                    <fullName>Studio/Efficiency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Application_Fee__c</fullName>
        <label>Company Application Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Pictures__c</fullName>
        <label>Has Pictures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Rent__c</fullName>
        <label>High Rent</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing_Status__c</fullName>
        <label>Listing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_To_Section_8_Tenants__c</fullName>
        <label>Market To Section-8 Tenants</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Median_Income_Rent_20__c</fullName>
        <label>Median Income Rent 20%</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Median_Income_Rent_30__c</fullName>
        <label>Median Income Rent 30%</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Median_Income_Rent_40__c</fullName>
        <label>Median Income Rent 40%</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Fair_Market_Rent__c</fullName>
        <label>No Fair Market Rent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Bathrooms__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Waiting_List__c</fullName>
        <label>On Waiting List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realtor_Asserts_Lead_paint_free__c</fullName>
        <label>Realtor Asserts Lead-paint-free</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Below_Listing_Limit__c</fullName>
        <label>Rent Below Listing Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Minimum_Lease_Months__c</fullName>
        <label>Rental Minimum Lease Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Security_Deposit_Slide_Scale_Low__c</fullName>
        <label>Rental Security Deposit Slide Scale Low</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Security_Deposit__c</fullName>
        <label>Rental Security Deposit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_by_How_Many_Months_Rent__c</fullName>
        <label>Security Deposit by How Many Months Rent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shared_Living_Facility__c</fullName>
        <label>Shared Living Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sliding_Scale_Rent_Based_On_Income__c</fullName>
        <label>Sliding Scale Rent Based On Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sliding_Scale_Rent_Low__c</fullName>
        <label>Sliding Scale Rent Low</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Smoking_Allowed__c</fullName>
        <label>Smoking Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RRH</fullName>
                </value>
                <value>
                    <fullName>VASH</fullName>
                </value>
                <value>
                    <fullName>VASH/RRH</fullName>
                </value>
                <value>
                    <fullName>Social Serve</fullName>
                </value>
                <value>
                    <fullName>Shared Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidized_Rent_Sponsored_Tenants__c</fullName>
        <label>Subsidized Rent / Sponsored Tenants</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Credit_Property__c</fullName>
        <label>Tax Credit Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <label>Available Unit_Remove</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Available Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Available Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>